fix background not stretching

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -13,7 +13,7 @@ body
    background-image:
   linear-gradient(#000033, #29293D);
   color: white;
-  height: 41em;
+  height: 100%;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
